--- a/src/AvenueClothing.Project.Website/packages.config
+++ b/src/AvenueClothing.Project.Website/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="4.0.0-alpha4" targetFramework="net461" />
   <package id="jQuery" version="3.0.0.1" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net461" />
   <package id="MicroCHAP" version="1.2.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
