--- a/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
+++ b/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
-    <Compile Include="Controllers\ItemAddedToBasketController.cs" />
+    <Compile Include="Controllers\BannerMessageController.cs" />
     <Compile Include="Controllers\ProductDetailController.cs" />
     <Compile Include="Controllers\ProductPageController.cs" />
     <Compile Include="Controllers\ProductPrimaryImageController.cs" />
@@ -149,7 +149,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FacetModelBinder.cs" />
     <Compile Include="ViewModels\CategoryImageViewModel.cs" />
-    <Compile Include="ViewModels\ItemAddedToBasketViewModel.cs" />
+    <Compile Include="ViewModels\BannerMessageViewModel.cs" />
     <Compile Include="ViewModels\ProductDetailViewModel.cs" />
     <Compile Include="ViewModels\CatalogImageCaruselRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryNavigationRenderingViewModel.cs" />
@@ -172,7 +172,7 @@
     <Content Include="Views\ProductTitle\Rendering.cshtml" />
     <Content Include="Views\ProductWellWithPickersAndButton\Rendering.cshtml" />
     <Content Include="Views\ProductPage\Rendering.cshtml" />
-    <Content Include="Views\ItemAddedToBasket\Rendering.cshtml" />
+    <Content Include="Views\BannerMessage\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jsPriceCalculation.js" />
