--- a/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -30,7 +30,44 @@ SharedFields:
         <r
           id="{DFCC28D2-F51F-46BC-9FF4-B4945FE2B05E}"
           ph="main"
-          uid="{974AC727-34A5-4053-8F04-F70E60D50F98}" />
+          uid="{974AC727-34A5-4053-8F04-F70E60D50F98}">
+          <rls>
+            <ruleset>
+              <rule
+                name="basket isn't empty"
+                uid="{64F192AC-568E-4B98-9E65-35E73DDC10E6}">
+                <conditions>
+                  <condition
+                    id="{F534DDB9-D2C7-44B5-AA28-3E03878F4A58}"
+                    uid="FA589893C5E64350B1BDB3A5CE48573B"
+                    except="true"
+                    operatorid="{066602E2-ED1D-44C2-A698-7ED27FD3A2CC}"
+                    TotalProductQuantity="0" />
+                </conditions>
+                <actions>
+                  <action
+                    id="{7B578B65-BD2F-4C7C-9A24-DAE3E98B4F23}"
+                    uid="002E12BA03024C8D8FFE178FF6300AE8"
+                    RenderingItem="{649A6719-B95B-4F33-9174-33AF31790B10}" />
+                  <action
+                    id="{0F3C6BEC-E56B-4875-93D7-2846A75881D2}"
+                    uid="8C5258A37F6C4F9396F9AB37B270356A"
+                    DataSource="{541FDEC1-460B-4B26-8D50-92B5CC7CF4E3}" />
+                </actions>
+              </rule>
+              <rule
+                uid="{00000000-0000-0000-0000-000000000000}"
+                name="Default">
+                <conditions>
+                  <condition
+                    id="{4888ABBB-F17D-4485-B14B-842413F88732}"
+                    uid="0EF7A21462474D97B013BA6CBA5C6653" />
+                </conditions>
+                <actions />
+              </rule>
+            </ruleset>
+          </rls>
+        </r>
         <r
           id="{AA92D865-76BA-4A80-ABD9-BC6E7CE83687}"
           ph="breadcrumb"
@@ -67,15 +104,8 @@ Languages:
           <d
             id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
             <r
-              uid="{0CB4F936-D411-4D6C-B048-181E9B8313A1}">
-              <p:d />
-            </r>
-            <r
               uid="{181FAF15-0FD0-418F-BD42-C0DDC263F082}"
-              p:before="r[@uid='{488D87DD-F566-4C06-AF19-0A052F93340F}']" />
-            <r
-              uid="{14E0474C-A7D6-4E58-BA5E-F16667157526}"
-              p:before="*[1=2]" />
+              p:after="*[1=2]" />
           </d>
         </r>
     - ID: "16efe389-3012-4244-bd53-87fe3f75c0a3"
