--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -134,6 +134,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\CommerceConnectBasketPreviewController.cs" />
     <Compile Include="Controllers\CommerceConnectBasketController.cs" />
     <Compile Include="Controllers\CommerceConnectAddToBasketButtonController.cs" />
@@ -147,7 +148,7 @@
     <Compile Include="Controllers\PaymentPickerController.cs" />
     <Compile Include="Controllers\AddToBasketButtonController.cs" />
     <Compile Include="Controllers\BasketController.cs" />
-    <Compile Include="Controllers\AddressController.cs" />
+    <Compile Include="Controllers\CommerceConnectAddressController.cs" />
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Controllers\VariantPickerController.cs" />
     <Compile Include="Controllers\ConfirmationEmailController.cs" />
@@ -188,6 +189,7 @@
     <Content Include="Scripts\jsAddToBasketButton.js" />
     <Content Include="Views\ConfirmationEmail\Rendering.cshtml" />
     <Content Include="Views\CommerceConnectPaymentPicker\Rendering.cshtml" />
+    <Content Include="Views\CommerceConnectBasketPreview\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jsPaymentPicker.js" />
