--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Search.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Search.yml
@@ -22,6 +22,10 @@ SharedFields:
           ph="header"
           uid="{0DB705AD-DD13-4A78-B745-9A161BD8C6D6}" />
         <r
+          id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
+          ph="header content"
+          uid="{8E19D593-685B-4284-AE4F-791528E43734}" />
+        <r
           id="{702720CF-81EB-4B67-AA31-400DDD891E50}"
           ph="main"
           uid="{BCF98B05-C114-46E1-AC3D-FBC59D4215B9}" />
@@ -33,6 +37,10 @@ SharedFields:
           id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
           ph="header content"
           uid="{3EDB6B6C-1396-4896-8D24-50741595FD7C}" />
+        <r
+          id="{F45E27B0-D4C0-4C0C-9CCC-CC9F5203F30D}"
+          ph="footer"
+          uid="{89271689-85DC-41B3-9C49-D704E59400FB}" />
       </d>
     </r>
 Languages:
